traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
def posFinale():Boolean = {
  if (getX() == (getMondeLargeur() - 1) && getY() == (getMondeHauteur() - 1)){
    return true
  }
  return false
}
  
def diago(cpt:Int,a:Int = 0):Int = {
  ecritMessage(cpt)
	if (a <= 6){
    if (getY() != 0){
      setPos(getX()+1, getY()-1)
    } else if (a != 6) {
      setPos(0,a)
      a = a + 1
    } else {
      a += 1
      setPos(a - 6,6)
    }
  } else {
    if (getX() != 6){
    	setPos(getX()+1, getY()-1)
    } else {
      a += 1
      setPos(a - 6,6)
    }
  }
  return a
}

override def run() {
  var cpt:Int = 0
  var diag:Int = 0
  while(!posFinale()){
    diag = diago(cpt, diag)
    cpt += 1
  }
  ecritMessage(cpt)
}